hphp/hack/test/typecheck/expression_trees/invalid_call3.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  Code`(2 + 2)(4)`;
}
